# lib-wii-u-format

./: .gitignore  Cargo.toml  arc.py  ghs_demangle.py  math.py  msscmp.py  nbt.py  range_manager.py  struct.txt  utils.py  wrapper.py
formats/: arc.hexpat  col.hexpat  level.hexpat  mcs.txt  pck.hexpat  wiiu.hexpat
ghidra_scripts/: InitFIDDB.py
lib/: binary.py  ghs_demangle.py
lib/migrated/: arc.py  rpx.py
migration/: listfunctions.py  make_ld.py  rpx.py
src/: binary_reader.rs  lib.rs  main.rs  string_reader.rs
src/binary_reader/: binary_reader.rs  endian.rs  mod.rs  parseable.rs
src/formats/: common.rs  mod.rs
src/formats/arc/: arc.rs  entry.rs  mod.rs
src/formats/nbt/: mod.rs  payload.rs  tag.rs
src/formats/rpx/: elf_header.rs  elf_identifier.rs  program_header.rs  rpx.rs  section_header.rs
src/ghs_demangle/: mod.rs
src/rpx/: elf_header.rs  elf_identifier.rs  mod.rs  program_header.rs  rpx.rs  section_header.rs
src/utils/: concat_number.rs  find_zero.rs  mod.rs  rev_32.rs
