[package]
name = "wiiu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }

[lib]
crate-type = ["cdylib"]